[project]
name = "pyninjotiff"
dynamic = ["version"]
description = "Python Ninjo TIFF writing library"
authors = [ { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" } ]
license = { text = "GPLv3" }
requires-python = ">=3.11"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy >=1.6",
    "pyproj >=3.2.1",
    "pyresample >=1.21.1",
    "dask >=2024.9.0",
    "xarray >=0.19.0",
    "trollimage >=1.15.1",
]

[project.optional-dependencies]
dev = ['pytest', 'pre-commit', 'pytest-cov']

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyninjotiff/version.py"
